<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_parking_query"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ParkingQueryActivity" >

    <ImageView
        android:id="@+id/img_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:adjustViewBounds="true"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/title"
        android:cropToPadding="false"
        android:paddingBottom="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/head_elem_title" />

    <Button
        android:id="@+id/parking_query_map"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parking_query_simple"
        android:layout_centerHorizontal="true"
        android:text="@string/parking_map_model" />

    <Button
        android:id="@+id/parking_query_simple"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_title"
        android:layout_centerHorizontal="true"
        android:text="@string/parking_simple_model" />

    <Button
        android:id="@+id/parking_query_help"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parking_query_map"
        android:layout_centerHorizontal="true"
        android:text="@string/parking_help" />

    <Button
        android:id="@+id/parking_query_about"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/parking_query_help"
        android:text="@string/parking_about" />

    <Button
        android:id="@+id/parking_query_exit"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parking_query_about"
        android:layout_centerHorizontal="true"
        android:text="@string/parking_exit" />

</RelativeLayout>