<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_simple"
    android:paddingLeft="30dp"
    android:paddingRight="30dp" >

    <EditText
        android:id="@+id/et_parking_query_simple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/parking_simple_hint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_parking_query_simple"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_parking_query_simple"
        android:layout_centerHorizontal="true"
        android:text="@string/parking_simple_query" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_parking_query_simple"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_parking_query_simple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parking_simple_result" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text=""
        android:textSize="32sp" />

</RelativeLayout>